# fhir-mcp-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  logging.conf  prestart.sh  pyproject.toml  start.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  main.py  proxy.py  test_config.py
app/core/: config.py
app/mcp/: exceptions.py
app/mcp/v1/: mcp.py
app/mcp/v1/tools/: allergy_intolerance.py  condition.py  document_reference.py  encounter.py  family_member_history.py  generic.py  immunization.py  medication.py  observation.py  patient.py  request_medplum.py
app/schemas/: document_schemas.py  fhir_schemas.py  vector_store_schemas.py
app/services/: loinc_client.py
app/services/fhir/: errors.py  fhir_client.py  models.py  oauth_client.py  token_manager.py
app/services/medplum/: errors.py  medplum_client.py  token_manager.py
app/services/rag/: document_manager.py  document_processor.py  document_service.py  pinecone_client.py  pinecone_initializer.py  search_query_processor.py  semantic_embedder.py  utils.py  vector_store_service.py
app/utils/: auth.py  config_utils.py  requests_extensions.py  token_utils.py
config/: .env.example  .env.test
scripts/cryptography/: decrypt_setting.py  encrypt_setting.py  generate_master_key.py  setup_encryption.py
scripts/start/: app.sh  load_models.py
tests/: client.py
