[project]
name = "mcp-template"
version = "0.1.0"
description = "MCP server template"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "cryptography>=45.0.4",
    "fastapi>=0.115.14",
    "fastmcp>=2.9.2",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "llama-index>=0.12.47",
    "llama-index-embeddings-huggingface>=0.5.5",
    "passlib>=1.7.4",
    "pinecone>=7.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "pypdf>=5.7.0",
    "sentence-transformers>=5.0.0",
    "testcontainers>=4.10.0",
    "testcontainers-postgres>=0.0.1rc1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
lint = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
    "types-requests>=2.32.4.20250611",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = false
disable_error_code = ["var-annotated"]
exclude = [
    "alembic/",
    "migrations/",
]

[project.scripts]
start = "start:main"
