[project]
name = "mcp-template"
version = "0.1.0"
description = "MCP server template"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2",
    "cryptography>=45.0",
    "fastapi>=0.116",
    "fastmcp>=2.9",
    "greenlet>=3.2",
    "httpx>=0.28",
    "llama-index>=0.12",
    "llama-index-embeddings-huggingface>=0.5",
    "passlib>=1.7",
    "pinecone>=7.3",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "pymupdf>=1.26",
    "sentence-transformers>=5.0.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
code-quality = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
    "ty>=0.0.1a15",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "I",     # isort
    "F",     # pyflakes
    "FAST",  # FastApi
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "COM",   # flake8-commas
    "T10",   # flake8-debugger
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN204", # missing-return-type-special-method
    "ANN401", # any-type
]


[project.scripts]
start = "start:main"
